--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,15 +30,15 @@ before_script:
 
 test:
   script:
-    - python setup.py test
-    - pip install tox flake8  # you can also use tox
+    - python3 setup.py test
+    - pip3 install tox flake8  # you can also use tox
     - tox -e py36,flake8
 
 run:
   script:
-    - python setup.py bdist_wheel
+    - python3 setup.py bdist_wheel
     # an alternative approach is to install and run:
-    - pip install dist/*
+    - pip3 install dist/*
     # run the command here
   artifacts:
     paths:
@@ -46,7 +46,7 @@ run:
 
 pages:
   script:
-    - pip install sphinx sphinx-rtd-theme
+    - pip3 install sphinx sphinx-rtd-theme
     - cd doc
     - make html
     - mv build/html/ ../public/
