--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,7 +37,7 @@ variables:
   MYPOSTGRES_PASSWORD: $chen020905
 
 default:
-  image: ubuntu:20.04
+  image: ruby:2.6
   #
   # Pick zero or more services to be used on all builds.
   # Only needed when using a docker container to run your tests in.
