--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,30 +1,10 @@
-image:
-  name: docker/compose:1.29.1
-  entrypoint: [""]
-
-services:
-  - docker:dind
-
 stages:
-  - build
-
-variables:
-  DOCKER_HOST: tcp://docker:2375
-  DOCKER_DRIVER: overlay2
-
-build:
-  stage: build
+- test
+- deploy
+app-import:
+  image: python:3
+  stage: test
   before_script:
-    - export IMAGE=$CI_REGISTRY/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME
-    - export WEB_IMAGE=$IMAGE:web
-    - export NGINX_IMAGE=$IMAGE:nginx
+    - pip install -r requirements.txt
   script:
-    - apk add --no-cache bash
-    - chmod +x ./setup_env.sh
-    - bash ./setup_env.sh
-    - docker login -u $CI_REGISTRY_USER -p $CI_JOB_TOKEN $CI_REGISTRY
-    - docker pull $IMAGE:web || true
-    - docker pull $IMAGE:nginx || true
-    - docker-compose -f docker-compose.ci.yml build
-    - docker push $IMAGE:web
-    - docker push $IMAGE:nginx
+    - python -c "import app"
