--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ variables:
 
 test:
   before_script:
-    - pip install -r team_matcher/requirements.txt -v # install pip packages required by our project
+    - pip install -r requirements.txt -v # install pip packages required by our project
     - python3 manage.py collectstatic --settings=teammatcherproject.local 
     - python3 manage.py makemigrations teammatcherapp --settings=teammatcherproject.local 
     - python3 manage.py migrate --settings=teammatcherproject.local
