--- a/teammatcherproject/.env
+++ b/teammatcherproject/.env
@@ -1,4 +1,4 @@
 DJANGO_TEAMUSER_PASSWORD=yourpasswordhere26262
 DJANGO_TEAMUSER_USERNAME=admin
 DJANGO_TEAMUSER_EMAIL=admin@example.com
-SECRET_KEY = 'django-insecure-o10&ocyl!#799lmdzzw#t)a%=c5!y4=$si^k+pcsfmhtwt2q9!'
+SECRET_KEY = 'matcher-1bq933i-3f1dqwmtukb75ueaf1ws&l7kml_cd^!s%-3zv%z5t+'
