Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,9 +36,10 @@ artifact:
     paths:
       - $CI_PROJECT_DIR
     exclude:
-      - $CI_PROJECT_DIR/deploy/*
-      - $CI_PROJECT_DIR/teammatcherproject/__pycache__/*
-      - $CI_PROJECT_DIR/teammatcherapp/__pycache__/*
+      - $CI_PROJECT_DIR/deploy
+       - $CI_PROJECT_DIR/git
+      - $CI_PROJECT_DIR/teammatcherproject/__pycache__
+      - $CI_PROJECT_DIR/teammatcherapp/__pycache__
 
 deploy:
   stage: deploy
