--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,6 +40,7 @@ artifact:
       - $CI_PROJECT_DIR/git
       - $CI_PROJECT_DIR/teammatcherproject/__pycache__
       - $CI_PROJECT_DIR/teammatcherapp/__pycache__
+      - $CI_PROJECT_DIR/static/img
 
 deploy:
   stage: deploy
