--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,11 +36,11 @@ artifact:
     paths:
       - $CI_PROJECT_DIR
     exclude:
-      - $CI_PROJECT_DIR/deploy
-      - $CI_PROJECT_DIR/git
-      - $CI_PROJECT_DIR/teammatcherproject/__pycache__
-      - $CI_PROJECT_DIR/teammatcherapp/__pycache__
-      - $CI_PROJECT_DIR/static/img
+      - $CI_PROJECT_DIR/deploy/**/*
+      - $CI_PROJECT_DIR/git/**/*
+      - $CI_PROJECT_DIR/teammatcherproject/__pycache__/**/*
+      - $CI_PROJECT_DIR/teammatcherapp/__pycache__/**/*
+      - $CI_PROJECT_DIR/static/img/**/*
 
 deploy:
   stage: deploy
