--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,6 +36,7 @@ artifact:
     paths:
       - $CI_PROJECT_DIR
     exclude:
+      - $CI_PROJECT_DIR/.git
       - $CI_PROJECT_DIR/deploy/*
       - $CI_PROJECT_DIR/git/*
       - $CI_PROJECT_DIR/teammatcherproject/__pycache__/*
