--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,12 +46,10 @@ artifact:
       - $CI_PROJECT_DIR/db.sqlite3
       - $CI_PROJECT_DIR/index.html
       - $CI_PROJECT_DIR/manage.py
+      - $CI_PROJECT_DIR/api
     exclude:
       - $CI_PROJECT_DIR/deploy/**
       - $CI_PROJECT_DIR/git/**
-      - $CI_PROJECT_DIR/teammatcherproject/__pycache__/*
-      - $CI_PROJECT_DIR/teammatcherapp/__pycache__/*
-      - $CI_PROJECT_DIR/static/img/**
 
 deploy:
   stage: deploy
